[tool.poetry]
name = "clasterinfo"
version = "0.1.0"
description = "Claster Info"
authors = ["Alex <temper8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
paramiko = "^3.4.0"
python-telegram-bot = "^21.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
